smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/unsupported-version.smithy
// Parse error at line 2, column 16 near `\n[EOF]`: Unsupported Smithy version number: 999
$version: "999"
